# metal-live-scene-analytics

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  ingest_kaggle.py  ingest_setlistfm.py  pyproject.toml
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/macros/: parse_reviews.sql  parse_subgenre.sql  touring_bucket.sql
dbt_project/models/marts/: _marts_schema.yml  agg_concerts_by_country.sql  agg_concerts_over_time.sql  agg_country_genre_affinity.sql  agg_festival_seasonality.sql  agg_genre_lifecycle.sql  agg_genre_review_distribution.sql  agg_genre_touring_intensity.sql  agg_productivity_vs_reviews.sql  agg_rating_vs_touring.sql  agg_subgenre_share_over_time.sql  agg_top_songs.sql  dim_bands.sql  dim_venues.sql  fct_concerts.sql
dbt_project/models/staging/: _stg_schema.yml  _stg_sources.yml  stg_albums.sql  stg_band_mapping.sql  stg_bands.sql  stg_labels.sql  stg_setlists.sql  stg_songs.sql
flows/: full_pipeline.py
pipeline/: load_raw.py
streamlit_app/: app.py
streamlit_app/pages/: 01_touring.py  02_temporal.py  05_reviews.py  07_country_genre.py  08_genre_lifecycle.py
streamlit_app/utils/: db.py
terraform/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
